apps/web/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comedor-web
  namespace: app-comedor-fsn
  labels:
    app.kubernetes.io/name: comedor-web
    app.kubernetes.io/part-of: app-comedor-fsn
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: comedor-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: comedor-web
        app.kubernetes.io/part-of: app-comedor-fsn
    spec:
      os:
        name: linux
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: 10.0.40.10:5000/app-comedor-fsn-web:1.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: nginx-temporary
              mountPath: /tmp
      volumes:
        - name: nginx-temporary
          emptyDir: {}
      terminationGracePeriodSeconds: 15
